--- a/adapt-web/package.json
+++ b/adapt-web/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "form-data": "^2.3.3",
+    "fs": "^0.0.1-security",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -19,7 +21,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "webpack-bundle-tracker": "^0.4.3"
   },
   "eslintConfig": {
     "root": true,
