--- a/adapt-web/package.json
+++ b/adapt-web/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "form-data": "^2.3.3",
     "fs": "^0.0.1-security",
+    "js-cookie": "^2.2.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
