Switch to Vue 2
Edit Vue files and dependencies to work with Vue 2

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 
 # Built Webpack App
 /static/*
+
+# Secure information
 /api/aws_config.txt
-/vue_frontend/webpack-stats.json
 
 # Database
 db.sqlite3
