--- a/vue_frontend/package.json
+++ b/vue_frontend/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "popper.js": "^1.16.1",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
     "webpack": "^5.0.0"
   },
