--- a/vue_frontend/package.json
+++ b/vue_frontend/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
+    "vue-multiselect": "^2.1.6",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
